# even_glasses

./: .gitignore  examples.py  pyproject.toml
even_glasses/: bluetooth_manager.py  commands.py  models.py
